# AI-Judge

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.claude/: settings.local.json
DataSet/ABC/: speech.txt
DataSet/Presence AI/: speech.txt
DataSet/WalkAssist/: speech.txt
Lynx Hack/Autonomous LVRA & Optimization/: speech.txt  summary.txt
Lynx Hack/CivicLens (done)/: speech.txt  summary.txt
Lynx Hack/CivicLens (done)/lynxhack_dtl-main/lynxhack_dtl-main/backend/: .env.example  main.py  pyproject.toml
Lynx Hack/CivicLens (done)/lynxhack_dtl-main/lynxhack_dtl-main/backend/agents/: economist.py  equity_analyst.py  simulation.py  urban_planner.py
Lynx Hack/CivicLens (done)/lynxhack_dtl-main/lynxhack_dtl-main/backend/api/: models.py
Lynx Hack/CivicLens (done)/lynxhack_dtl-main/lynxhack_dtl-main/backend/api/routes/: health.py  simulate.py
Lynx Hack/CivicLens (done)/lynxhack_dtl-main/lynxhack_dtl-main/backend/data/: cache.py  census.py  fred.py  search.py
Lynx Hack/CivicLens (done)/lynxhack_dtl-main/lynxhack_dtl-main/backend/rag/: pipeline.py
Lynx Hack/KineticMotionAI/: speech.txt
Lynx Hack/LeetGotchi (done)/: speech.txt  summary.txt
Lynx Hack/MindBridge/: speech.txt  summary.txt
backend/: judge_pipeline.py  pdf_extract.py  repo_extract.py  requirements.txt  server.py  video_extract.py
frontend/: app.js  index.html  styles.css
models/: Modelfile  ModelfileCode  ModelfileSlides  ModelfileText  entrypoint-ollama.sh
tests/: test_pipeline.py  test_reasoning.py  test_structured_think.py
(+104 files in other folders)
